--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 </head>
 <body>
    <main>
-      <div>
+      <div class="passo ativo" id="passo-0">
         <p>Um lindo dia passeando pela rua encontrei um mapa do tesouro.  </p>
 
+        <button class="btn-proximo" data-proximo="1">Sao Paulo</button>
+        <button class="btn-proximo" data-proximo="2">Esperito Santo</button>
       </div>
+      <div class="passo" id="passo-1">
+         <p> Em Sao Paulo encontramos mais pista no Parque Vila Lobos, vá até o parque para mais descoberta. </p>
+         <button class="btn-proximo" data-proximo="3">Parque Vila Lobos</button>
+         <button class="btn-proximo" data-proximo="4">Desistir e voltar pra casa</button> 
+      </div>
+
    </main> 
+  <script src="script.js"></script>
 
 
 
