--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
 <body>
    <main>
       <div class="passo ativo" id="passo-0">
+         <img src="cenario-passo0.webp" alt="">
         <p>Um lindo dia passeando pela rua encontrei um mapa do tesouro.  </p>
 
         <button class="btn-proximo" data-proximo="1">Sao Paulo</button>
-        <button class="btn-proximo" data-proximo="2">Esperito Santo</button>
+        <button class="btn-proximo" data-proximo="2">Bahia</button>
       </div>
       <div class="passo" id="passo-1">
          <p> Em Sao Paulo encontramos mais pista no Parque Vila Lobos, vá até o parque para mais descoberta. </p>
          <button class="btn-proximo" data-proximo="3">Parque Vila Lobos</button>
          <button class="btn-proximo" data-proximo="4">Desistir e voltar pra casa</button> 
+      </div>
+
+      <div class="passo" id="passo-2">
+         <p>Na Bahia encontramos alguns enigmas que precisava serem desvendado para chegar até o proximo passo./p>
+            <button class="btn-proximo" data-proximo="5">Pelourinho</button>
+         <button class="btn-proximo" data-proximo="6">Porto de galinha</button> 
+
+
+
+
+
       </div>
 
    </main> 
